--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,15 @@
 language: go
+
+env:
+  global:
+    - MG_DEBUG=false
+
 go:
   - '1.8'
   - '1.9'
   - '1.10'
   - '1.11'
+
 before_install:
   - go get -v github.com/google/go-querystring/query
   - go get -v github.com/stretchr/testify/assert
