--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,7 @@ jobs:
     name: Tests
     runs-on: ubuntu-latest
     strategy:
+      max-parallel: 1
       matrix:
         go-version: ['1.8', '1.9', '1.10', '1.11']
     steps:
