--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,7 @@ jobs:
           go get -v github.com/google/go-querystring/query
           go get -v github.com/stretchr/testify/assert
           go get -v github.com/joho/godotenv
+          go get -v github.com/h2non/gock
       - name: Tests
         run: go test -v ./... -cover -coverprofile=coverage.txt -covermode=atomic
       - name: Coverage
