--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,9 +17,8 @@ jobs:
     name: Tests
     runs-on: ubuntu-latest
     strategy:
-      max-parallel: 1
       matrix:
-        go-version: ['1.13', '1.14']
+        go-version: ['1.13', '1.14', '1.15']
     steps:
       - name: Set up Go ${{ matrix.go-version }}
         uses: actions/setup-go@v2
