--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,13 +23,13 @@ jobs:
       - name: Set up latest Go 1.x version
         uses: actions/setup-go@v2
         with:
-          go-version: '^1'
+          go-version: '1.17'
       - name: Get dependencies
         run: |
           go mod tidy
           cp .env.dist .env
       - name: Lint code with golangci-lint
-        uses: golangci/golangci-lint-action@v2
+        uses: golangci/golangci-lint-action@v3
         with:
           version: v1.36
           only-new-issues: true
