--- a/.golangci.yml
+++ b/.golangci.yml
@@ -174,6 +174,7 @@ issues:
         - gocognit
         - gocyclo
         - godot
+        - unused
   exclude-use-default: true
   exclude-case-sensitive: false
   max-issues-per-linter: 0
